# syscalls-inspection

./: Cargo.toml  LICENSE  README.md
syscalls-inspection/: Cargo.toml
syscalls-inspection-common/: Cargo.toml
syscalls-inspection-common/src/: lib.rs
syscalls-inspection-ebpf/: Cargo.toml
syscalls-inspection-ebpf/src/: main.rs
syscalls-inspection/src/: main.rs
xtask/src/: build_ebpf.rs  main.rs  run.rs
