[package]
name = "syscalls-inspection"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
syscalls-inspection-common = { path = "../syscalls-inspection-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["full"] }
regex = "1.5"
bytes = "1"
nix = "0.26.1"
crossbeam-channel = "0.5.6"

[[bin]]
name = "syscalls-inspection"
path = "src/main.rs"